# scintillamod

./: CMakeLists.txt  README.md  main.cpp
stc/: PlatWX.cpp  PlatWX.h  ScintillaWX.cpp  ScintillaWX.h  gen_iface.py  stc.cpp  stc.cpp.in  stc.h
stc/scintilla/include/: ILexer.h  Platform.h  Scintilla.h
stc/scintilla/lexers/: LexA68k.cxx  LexAPDL.cxx  LexASY.cxx  LexAU3.cxx  LexAVE.cxx  LexAVS.cxx  LexAbaqus.cxx  LexAda.cxx  LexAsm.cxx  LexAsn1.cxx  LexBaan.cxx  LexBash.cxx  LexBasic.cxx  LexBatch.cxx  LexBibTeX.cxx  LexBullant.cxx  LexCIL.cxx  LexCLW.cxx  LexCOBOL.cxx  LexCPP.cxx  LexCSS.cxx  LexCaml.cxx  LexCmake.cxx  LexCoffeeScript.cxx  LexConf.cxx  LexCrontab.cxx  LexCsound.cxx  LexD.cxx  LexDMAP.cxx  LexDMIS.cxx  LexDataflex.cxx  LexDiff.cxx  LexECL.cxx  LexEDIFACT.cxx  LexEScript.cxx  LexEiffel.cxx  LexErlang.cxx  LexErrorList.cxx  LexFlagship.cxx  LexForth.cxx  (+75 more)
stc/scintilla/lexilla/src/: Lexilla.cxx  Lexilla.h
stc/scintilla/lexlib/: Accessor.cxx  Accessor.h  CatalogueModules.h  CharacterCategory.cxx  CharacterCategory.h  CharacterSet.cxx  CharacterSet.h  DefaultLexer.cxx  DefaultLexer.h  LexAccessor.h  LexerBase.cxx  LexerBase.h  LexerModule.cxx  LexerModule.h  LexerNoExceptions.cxx  LexerNoExceptions.h  LexerSimple.cxx  LexerSimple.h  OptionSet.h  PropSetSimple.cxx  PropSetSimple.h  SparseState.h  StringCopy.h  StyleContext.cxx  StyleContext.h  SubStyles.h  WordList.cxx  WordList.h
stc/scintilla/src/: AutoComplete.cxx  AutoComplete.h  CallTip.cxx  CallTip.h  CaseConvert.cxx  CaseConvert.h  CaseFolder.cxx  CaseFolder.h  Catalogue.cxx  Catalogue.h  CellBuffer.cxx  CellBuffer.h  CharClassify.cxx  CharClassify.h  ContractionState.cxx  ContractionState.h  DBCS.cxx  DBCS.h  Decoration.cxx  Decoration.h  Document.cxx  Document.h  EditModel.cxx  EditModel.h  EditView.cxx  EditView.h  Editor.cxx  Editor.h  ElapsedPeriod.h  ExternalLexer.cxx  ExternalLexer.h  FontQuality.h  Indicator.cxx  Indicator.h  IntegerRectangle.h  InterVec.h  KeyMap.cxx  KeyMap.h  LineMarker.cxx  LineMarker.h  (+28 more)
